--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 body {
         background-image: url("7064efbe-0808-470b-b51d-aaeb5cee6c6f.JPG");
+        background-position: center;
+        background-repeat: no-repeat;
         background-size: cover;
         font-family: 'Orbitron', sans-serif;
         font-family: 'Yanone Kaffeesatz', sans-serif;
